Issue 262: Make margin around logo on small device

--- a/themes/bootstrap3/less/parts/header.less
+++ b/themes/bootstrap3/less/parts/header.less
@@ -81,6 +81,12 @@ header {
   }
 }
 
+@media (max-width: 767px) {
+  .navbar-brand {
+    margin: 0 10px;
+  }
+}
+
 //vertical line after knihovny.cz logo
 .navbar-header{
   border-right: 1px solid rgb(204, 204, 204);
